[gd_scene load_steps=10 format=2]

[ext_resource path="res://level/level.tscn" type="PackedScene" id=1]
[ext_resource path="res://ennemie/Boss.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/Spellbook.tscn" type="PackedScene" id=3]
[ext_resource path="res://level/levels/Control.gd" type="Script" id=4]
[ext_resource path="res://menu_and_ui/theme_control.tres" type="Theme" id=5]
[ext_resource path="res://level/levels/Control2.gd" type="Script" id=6]
[ext_resource path="res://shared_ressource/celebration.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 159.57, 168.679 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1
light_mode = 1

[node name="Node2D" type="Node2D"]

[node name="level" parent="." instance=ExtResource( 1 )]

[node name="Floor" parent="level" index="0"]
tile_data = PoolIntArray( -1114088, 2, 4, -1114087, 2, 5, -1114086, 2, 5, -1114085, 2, 5, -1114084, 2, 65536, -1048556, 2, 4, -1048555, 2, 5, -1048554, 2, 5, -1048553, 2, 65536, -1048552, 4, 2, -1048551, 4, 0, -1048550, 5, 2, -1048549, 4, 2, -1048548, 4, 2, -1048547, 2, 4, -1048546, 2, 5, -1048545, 2, 5, -1048544, 2, 65536, -983023, 2, 4, -983022, 2, 5, -983021, 2, 65536, -983020, 4, 2, -983019, 4, 0, -983018, 4, 2, -983017, 4, 3, -983016, 4, 3, -983015, 4, 2, -983014, 4, 2, -983013, 5, 1, -983012, 4, 0, -983011, 4, 0, -983010, 4, 0, -983009, 4, 0, -983008, 4, 2, -983007, 2, 4, -983006, 2, 5, -983005, 2, 65536, -917489, 2, 4, -917488, 2, 65536, -917487, 4, 0, -917486, 4, 2, -917485, 4, 0, -917484, 4, 2, -917483, 4, 1, -917482, 4, 2, -917481, 4, 2, -917480, 4, 2, -917479, 4, 3, -917478, 4, 2, -917477, 5, 0, -917476, 4, 2, -917475, 4, 0, -917474, 4, 2, -917473, 4, 2, -917472, 4, 0, -917471, 4, 2, -917470, 4, 0, -917469, 4, 3, -917468, 2, 4, -917467, 2, 65536, -851954, 2, 0, -851953, 4, 2, -851952, 4, 1, -851951, 4, 1, -851950, 4, 3, -851949, 4, 2, -851948, 4, 1, -851947, 4, 1, -851946, 4, 2, -851945, 4, 2, -851944, 4, 0, -851943, 4, 0, -851942, 4, 0, -851941, 4, 0, -851940, 4, 0, -851939, 4, 0, -851938, 4, 2, -851937, 4, 1, -851936, 4, 0, -851935, 4, 0, -851934, 4, 0, -851933, 4, 2, -851932, 4, 0, -851931, 4, 2, -851930, 2, 0, -786419, 2, 2, -786418, 4, 0, -786417, 4, 1, -786416, 4, 0, -786415, 4, 0, -786414, 4, 0, -786413, 4, 2, -786412, 4, 3, -786411, 4, 0, -786410, 4, 2, -786409, 4, 2, -786408, 4, 3, -786407, 4, 1, -786406, 4, 0, -786405, 5, 2, -786404, 4, 0, -786403, 4, 3, -786402, 4, 0, -786401, 4, 2, -786400, 4, 3, -786399, 4, 0, -786398, 4, 3, -786397, 4, 3, -786396, 4, 0, -786395, 4, 0, -786394, 4, 2, -786393, 2, 2, -720883, 2, 3, -720882, 4, 0, -720881, 4, 2, -720880, 5, 0, -720879, 4, 0, -720878, 4, 2, -720877, 4, 1, -720876, 4, 2, -720875, 4, 2, -720874, 4, 3, -720873, 4, 3, -720872, 4, 1, -720871, 4, 2, -720870, 5, 0, -720869, 4, 0, -720868, 4, 0, -720867, 4, 3, -720866, 4, 0, -720865, 4, 0, -720864, 4, 2, -720863, 4, 3, -720862, 4, 0, -720861, 4, 1, -720860, 4, 2, -720859, 4, 1, -720858, 4, 0, -720857, 2, 3, -655348, 2, 2, -655347, 4, 2, -655346, 4, 3, -655345, 4, 0, -655344, 4, 0, -655343, 5, 2, -655342, 4, 0, -655341, 4, 2, -655340, 4, 1, -655339, 4, 0, -655338, 4, 0, -655337, 4, 2, -655336, 4, 2, -655335, 4, 0, -655334, 5, 0, -655333, 4, 0, -655332, 4, 1, -655331, 4, 0, -655330, 4, 2, -655329, 4, 0, -655328, 4, 2, -655327, 4, 3, -655326, 4, 0, -655325, 4, 0, -655324, 5, 3, -655323, 4, 0, -655322, 4, 2, -655321, 4, 1, -655320, 2, 2, -589812, 2, 1, -589811, 4, 1, -589810, 4, 3, -589809, 4, 2, -589808, 5, 0, -589807, 4, 1, -589806, 4, 2, -589805, 4, 0, -589804, 4, 1, -589803, 4, 1, -589802, 4, 0, -589801, 4, 3, -589800, 4, 0, -589799, 4, 3, -589798, 5, 0, -589797, 5, 2, -589796, 4, 0, -589795, 4, 0, -589794, 4, 3, -589793, 4, 0, -589792, 4, 0, -589791, 4, 0, -589790, 4, 3, -589789, 4, 0, -589788, 5, 3, -589787, 4, 0, -589786, 4, 0, -589785, 4, 3, -589784, 2, 1, -524276, 2, 1, -524275, 4, 0, -524274, 4, 0, -524273, 4, 2, -524272, 4, 2, -524271, 4, 0, -524270, 4, 3, -524269, 4, 0, -524268, 4, 0, -524267, 4, 3, -524266, 4, 1, -524265, 4, 1, -524264, 4, 0, -524263, 4, 0, -524262, 5, 2, -524261, 4, 0, -524260, 4, 0, -524259, 4, 0, -524258, 4, 2, -524257, 4, 0, -524256, 4, 0, -524255, 4, 2, -524254, 5, 1, -524253, 4, 2, -524252, 4, 0, -524251, 4, 0, -524250, 4, 0, -524249, 4, 0, -524248, 2, 3, -458740, 2, 3, -458739, 4, 0, -458738, 4, 0, -458737, 4, 0, -458736, 4, 1, -458735, 4, 3, -458734, 4, 0, -458733, 5, 1, -458732, 4, 2, -458731, 4, 0, -458730, 4, 0, -458729, 4, 0, -458728, 4, 1, -458727, 4, 2, -458726, 5, 0, -458725, 4, 2, -458724, 4, 3, -458723, 4, 3, -458722, 4, 2, -458721, 4, 3, -458720, 4, 3, -458719, 4, 2, -458718, 5, 0, -458717, 4, 1, -458716, 4, 0, -458715, 4, 0, -458714, 4, 2, -458713, 4, 3, -458712, 4, 0, -458711, 2, 2, -393205, 2, 2, -393204, 4, 2, -393203, 4, 0, -393202, 4, 3, -393201, 4, 2, -393200, 4, 2, -393199, 4, 0, -393198, 4, 2, -393197, 4, 2, -393196, 5, 0, -393195, 5, 0, -393194, 5, 2, -393193, 4, 2, -393192, 4, 2, -393191, 4, 0, -393190, 5, 2, -393189, 5, 0, -393188, 4, 0, -393187, 4, 3, -393186, 4, 2, -393185, 5, 2, -393184, 4, 1, -393183, 5, 2, -393182, 4, 1, -393181, 4, 0, -393180, 4, 0, -393179, 4, 2, -393178, 4, 0, -393177, 4, 3, -393176, 4, 0, -393175, 2, 1, -327669, 2, 1, -327668, 4, 0, -327667, 4, 2, -327666, 4, 2, -327665, 4, 0, -327664, 4, 0, -327663, 4, 2, -327662, 4, 0, -327661, 4, 0, -327660, 4, 1, -327659, 4, 3, -327658, 4, 2, -327657, 4, 0, -327656, 5, 3, -327655, 5, 3, -327654, 5, 2, -327653, 4, 2, -327652, 5, 2, -327651, 5, 0, -327650, 4, 0, -327649, 4, 2, -327648, 4, 1, -327647, 4, 0, -327646, 4, 2, -327645, 4, 1, -327644, 4, 0, -327643, 4, 3, -327642, 4, 0, -327641, 4, 0, -327640, 4, 0, -327639, 2, 1, -262133, 2, 1, -262132, 4, 0, -262131, 4, 1, -262130, 4, 0, -262129, 4, 3, -262128, 4, 0, -262127, 4, 1, -262126, 4, 0, -262125, 4, 3, -262124, 4, 1, -262123, 4, 0, -262122, 4, 0, -262121, 4, 2, -262120, 4, 2, -262119, 5, 3, -262118, 5, 0, -262117, 5, 3, -262116, 5, 0, -262115, 4, 0, -262114, 4, 0, -262113, 4, 0, -262112, 4, 1, -262111, 4, 3, -262110, 4, 0, -262109, 4, 2, -262108, 4, 0, -262107, 4, 0, -262106, 4, 3, -262105, 4, 2, -262104, 4, 1, -262103, 2, 3, -196598, 2, 0, -196597, 2, 0, -196596, 4, 1, -196595, 4, 1, -196594, 4, 1, -196593, 4, 0, -196592, 4, 0, -196591, 4, 2, -196590, 4, 0, -196589, 4, 2, -196588, 4, 0, -196587, 4, 0, -196586, 4, 2, -196585, 4, 0, -196584, 4, 2, -196583, 5, 3, -196582, 5, 0, -196581, 4, 2, -196580, 5, 2, -196579, 4, 2, -196578, 4, 2, -196577, 4, 2, -196576, 4, 1, -196575, 4, 1, -196574, 4, 0, -196573, 4, 3, -196572, 4, 2, -196571, 4, 1, -196570, 4, 0, -196569, 4, 0, -196568, 4, 0, -196567, 4, 2, -196566, 2, 2, -131062, 2, 1, -131061, 4, 2, -131060, 4, 1, -131059, 4, 0, -131058, 4, 0, -131057, 4, 0, -131056, 4, 0, -131055, 4, 2, -131054, 4, 1, -131053, 4, 2, -131052, 4, 2, -131051, 4, 2, -131050, 4, 1, -131049, 4, 0, -131048, 4, 3, -131047, 5, 0, -131046, 5, 3, -131045, 5, 1, -131044, 5, 0, -131043, 4, 0, -131042, 5, 0, -131041, 4, 0, -131040, 4, 1, -131039, 4, 0, -131038, 4, 0, -131037, 4, 2, -131036, 4, 1, -131035, 4, 1, -131034, 4, 3, -131033, 4, 1, -131032, 4, 0, -131031, 4, 2, -131030, 2, 1, -65526, 2, 1, -65525, 4, 3, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 5, 0, -65520, 5, 2, -65519, 4, 3, -65518, 4, 3, -65517, 4, 1, -65516, 4, 0, -65515, 4, 3, -65514, 4, 3, -65513, 5, 0, -65512, 5, 0, -65511, 5, 2, -65510, 5, 0, -65509, 5, 1, -65508, 5, 0, -65507, 4, 2, -65506, 5, 0, -65505, 5, 3, -65504, 5, 0, -65503, 4, 2, -65502, 4, 0, -65501, 4, 0, -65500, 4, 0, -65499, 4, 1, -65498, 4, 1, -65497, 4, 1, -65496, 5, 0, -65495, 4, 3, -65494, 2, 1, 10, 2, 1, 11, 5, 0, 12, 5, 0, 13, 5, 3, 14, 5, 0, 15, 5, 3, 16, 5, 2, 17, 5, 3, 18, 5, 2, 19, 4, 0, 20, 4, 0, 21, 5, 3, 22, 4, 0, 23, 4, 3, 24, 4, 3, 25, 5, 1, 26, 5, 0, 27, 5, 3, 28, 5, 3, 29, 4, 1, 30, 4, 0, 31, 4, 0, 32, 5, 1, 33, 4, 0, 34, 4, 0, 35, 5, 1, 36, 5, 0, 37, 4, 0, 38, 4, 0, 39, 4, 0, 40, 4, 0, 41, 4, 2, 42, 2, 1, 65546, 2, 1, 65547, 4, 2, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 2, 65553, 4, 2, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 2, 65558, 4, 2, 65559, 4, 1, 65560, 4, 0, 65561, 5, 2, 65562, 5, 3, 65563, 4, 0, 65564, 5, 0, 65565, 4, 3, 65566, 4, 0, 65567, 4, 1, 65568, 4, 0, 65569, 4, 3, 65570, 4, 1, 65571, 4, 3, 65572, 4, 0, 65573, 4, 0, 65574, 4, 2, 65575, 4, 0, 65576, 4, 3, 65577, 4, 0, 65578, 2, 1, 131082, 2, 0, 131083, 2, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 3, 131087, 4, 1, 131088, 4, 0, 131089, 4, 1, 131090, 4, 1, 131091, 4, 0, 131092, 4, 2, 131093, 4, 2, 131094, 4, 2, 131095, 4, 0, 131096, 4, 0, 131097, 5, 3, 131098, 4, 2, 131099, 5, 0, 131100, 5, 0, 131101, 4, 0, 131102, 4, 0, 131103, 4, 2, 131104, 4, 0, 131105, 4, 3, 131106, 4, 3, 131107, 4, 1, 131108, 4, 0, 131109, 4, 0, 131110, 4, 0, 131111, 4, 1, 131112, 4, 0, 131113, 4, 0, 131114, 2, 3, 196619, 2, 1, 196620, 4, 2, 196621, 4, 1, 196622, 4, 2, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 3, 196627, 4, 0, 196628, 4, 1, 196629, 4, 2, 196630, 4, 0, 196631, 4, 0, 196632, 5, 3, 196633, 5, 0, 196634, 5, 2, 196635, 5, 0, 196636, 5, 0, 196637, 5, 1, 196638, 4, 1, 196639, 4, 3, 196640, 4, 1, 196641, 4, 0, 196642, 4, 0, 196643, 4, 0, 196644, 4, 3, 196645, 4, 0, 196646, 4, 3, 196647, 4, 2, 196648, 4, 2, 196649, 2, 2, 262155, 2, 1, 262156, 4, 2, 262157, 4, 0, 262158, 4, 2, 262159, 4, 2, 262160, 4, 2, 262161, 4, 2, 262162, 4, 1, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 5, 1, 262167, 4, 2, 262168, 4, 0, 262169, 4, 0, 262170, 4, 0, 262171, 5, 0, 262172, 4, 2, 262173, 4, 0, 262174, 4, 2, 262175, 4, 0, 262176, 4, 0, 262177, 4, 0, 262178, 4, 2, 262179, 4, 1, 262180, 4, 2, 262181, 4, 2, 262182, 4, 1, 262183, 4, 3, 262184, 4, 0, 262185, 2, 1, 327691, 2, 3, 327692, 4, 0, 327693, 4, 2, 327694, 4, 0, 327695, 4, 2, 327696, 4, 0, 327697, 4, 0, 327698, 4, 2, 327699, 4, 0, 327700, 4, 2, 327701, 4, 2, 327702, 4, 1, 327703, 4, 3, 327704, 4, 1, 327705, 4, 1, 327706, 4, 1, 327707, 5, 1, 327708, 4, 3, 327709, 4, 0, 327710, 4, 3, 327711, 5, 2, 327712, 4, 2, 327713, 4, 0, 327714, 4, 2, 327715, 4, 0, 327716, 4, 1, 327717, 4, 2, 327718, 4, 0, 327719, 4, 3, 327720, 4, 0, 327721, 2, 1, 393228, 2, 2, 393229, 4, 0, 393230, 4, 2, 393231, 4, 0, 393232, 4, 3, 393233, 4, 0, 393234, 4, 0, 393235, 4, 1, 393236, 4, 0, 393237, 4, 2, 393238, 4, 0, 393239, 4, 2, 393240, 4, 0, 393241, 4, 2, 393242, 4, 3, 393243, 5, 0, 393244, 4, 1, 393245, 4, 3, 393246, 4, 2, 393247, 4, 0, 393248, 4, 3, 393249, 4, 2, 393250, 4, 0, 393251, 4, 3, 393252, 4, 1, 393253, 4, 2, 393254, 4, 2, 393255, 4, 0, 393256, 4, 0, 393257, 2, 3, 458764, 2, 1, 458765, 4, 0, 458766, 4, 3, 458767, 4, 2, 458768, 4, 2, 458769, 4, 2, 458770, 4, 2, 458771, 4, 3, 458772, 4, 1, 458773, 5, 3, 458774, 4, 0, 458775, 4, 1, 458776, 4, 2, 458777, 4, 0, 458778, 4, 2, 458779, 4, 2, 458780, 4, 1, 458781, 4, 3, 458782, 4, 3, 458783, 4, 0, 458784, 4, 1, 458785, 5, 1, 458786, 4, 3, 458787, 4, 2, 458788, 4, 3, 458789, 4, 2, 458790, 4, 2, 458791, 4, 0, 458792, 2, 2, 524300, 2, 1, 524301, 4, 3, 524302, 4, 2, 524303, 4, 0, 524304, 4, 3, 524305, 4, 1, 524306, 4, 2, 524307, 4, 0, 524308, 5, 0, 524309, 5, 0, 524310, 4, 3, 524311, 4, 2, 524312, 4, 0, 524313, 4, 0, 524314, 4, 0, 524315, 4, 1, 524316, 4, 2, 524317, 4, 3, 524318, 4, 3, 524319, 4, 1, 524320, 4, 0, 524321, 4, 0, 524322, 5, 0, 524323, 4, 0, 524324, 4, 2, 524325, 4, 0, 524326, 4, 2, 524327, 4, 3, 524328, 2, 1, 589836, 2, 3, 589837, 4, 3, 589838, 4, 2, 589839, 4, 3, 589840, 4, 2, 589841, 4, 0, 589842, 5, 3, 589843, 4, 0, 589844, 4, 2, 589845, 4, 0, 589846, 4, 3, 589847, 4, 2, 589848, 4, 0, 589849, 4, 0, 589850, 5, 3, 589851, 4, 1, 589852, 4, 3, 589853, 4, 1, 589854, 4, 0, 589855, 4, 0, 589856, 4, 0, 589857, 4, 0, 589858, 4, 0, 589859, 5, 0, 589860, 5, 0, 589861, 5, 1, 589862, 4, 3, 589863, 4, 1, 589864, 2, 3, 655373, 2, 2, 655374, 4, 1, 655375, 4, 2, 655376, 4, 0, 655377, 4, 3, 655378, 4, 0, 655379, 4, 2, 655380, 4, 3, 655381, 4, 0, 655382, 4, 2, 655383, 4, 3, 655384, 4, 0, 655385, 4, 3, 655386, 4, 2, 655387, 4, 1, 655388, 4, 2, 655389, 4, 0, 655390, 4, 3, 655391, 4, 2, 655392, 4, 3, 655393, 4, 0, 655394, 4, 0, 655395, 4, 3, 655396, 5, 0, 655397, 5, 0, 655398, 4, 3, 655399, 2, 2, 720909, 2, 3, 720910, 4, 2, 720911, 4, 3, 720912, 4, 2, 720913, 4, 1, 720914, 4, 0, 720915, 4, 0, 720916, 4, 2, 720917, 4, 1, 720918, 4, 2, 720919, 4, 0, 720920, 4, 0, 720921, 4, 0, 720922, 5, 0, 720923, 4, 0, 720924, 4, 3, 720925, 4, 0, 720926, 4, 2, 720927, 4, 0, 720928, 4, 0, 720929, 4, 3, 720930, 4, 3, 720931, 4, 0, 720932, 4, 3, 720933, 4, 1, 720934, 4, 0, 720935, 2, 3, 786446, 2, 0, 786447, 4, 0, 786448, 4, 0, 786449, 4, 0, 786450, 4, 0, 786451, 4, 2, 786452, 4, 1, 786453, 4, 1, 786454, 4, 0, 786455, 4, 2, 786456, 4, 2, 786457, 4, 2, 786458, 4, 2, 786459, 4, 2, 786460, 4, 0, 786461, 4, 3, 786462, 4, 2, 786463, 4, 2, 786464, 4, 1, 786465, 4, 0, 786466, 4, 0, 786467, 4, 1, 786468, 4, 0, 786469, 4, 2, 786470, 2, 0, 851983, 2, 4, 851984, 2, 65536, 851985, 4, 1, 851986, 4, 1, 851987, 4, 0, 851988, 4, 1, 851989, 4, 0, 851990, 4, 0, 851991, 4, 0, 851992, 4, 3, 851993, 4, 1, 851994, 4, 0, 851995, 4, 0, 851996, 5, 2, 851997, 4, 2, 851998, 4, 1, 851999, 4, 0, 852000, 4, 0, 852001, 4, 3, 852002, 4, 0, 852003, 4, 2, 852004, 2, 4, 852005, 2, 65536, 917521, 2, 4, 917522, 2, 5, 917523, 2, 65536, 917524, 4, 3, 917525, 4, 0, 917526, 4, 2, 917527, 4, 0, 917528, 4, 2, 917529, 4, 0, 917530, 4, 2, 917531, 4, 3, 917532, 4, 2, 917533, 4, 0, 917534, 4, 3, 917535, 4, 2, 917536, 4, 1, 917537, 2, 4, 917538, 2, 5, 917539, 2, 65536, 983060, 2, 4, 983061, 2, 5, 983062, 2, 5, 983063, 2, 65536, 983064, 4, 3, 983065, 4, 0, 983066, 4, 0, 983067, 4, 0, 983068, 4, 2, 983069, 2, 4, 983070, 2, 5, 983071, 2, 5, 983072, 2, 65536, 1048600, 2, 4, 1048601, 2, 5, 1048602, 2, 5, 1048603, 2, 5, 1048604, 2, 65536 )

[node name="Spawn" parent="level" index="3"]
position = Vector2( 951.48, 0 )

[node name="CollisionShape2D" parent="level/Spawn/Safe" index="0"]
shape = SubResource( 1 )

[node name="Portal" parent="level" index="4"]
position = Vector2( 2929.27, -3.5636 )
path_next_level = "res://level/levels/level1.tscn"

[node name="Player" parent="level" index="6"]
position = Vector2( 304, -192 )

[node name="CameraPlayer" parent="level" index="7"]
zoom = Vector2( 2, 2 )

[node name="TopLeft" parent="level/CameraPlayer/Limits" index="0"]
position = Vector2( 656, -1072 )

[node name="BottomRight" parent="level/CameraPlayer/Limits" index="1"]
position = Vector2( 2736, 1072 )

[node name="InvisWallPlayer" parent="level" index="9"]
position = Vector2( -4.75684, -409.087 )

[node name="Boss" parent="level" instance=ExtResource( 2 )]
position = Vector2( 1736, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="level"]

[node name="Control2" type="Control" parent="level/CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="level/CanvasLayer/Control2"]
margin_right = 544.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="level/CanvasLayer/Control2/Container"]
margin_left = 54.4
margin_top = 4.8
margin_right = 547.4
margin_bottom = 4.8

[node name="VBoxContainer" type="VBoxContainer" parent="level/CanvasLayer/Control2/Container/CenterContainer"]
material = SubResource( 2 )
margin_right = 800.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 0 )
custom_constants/separation = 1

[node name="Health" type="ProgressBar" parent="level/CanvasLayer/Control2/Container/CenterContainer/VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
use_parent_material = true
margin_right = 800.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
step = 1.0
percent_visible = false

[node name="Shield" type="ProgressBar" parent="level/CanvasLayer/Control2/Container/CenterContainer/VBoxContainer"]
modulate = Color( 0, 0.882353, 1, 1 )
use_parent_material = true
margin_top = 11.0
margin_right = 800.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 10 )
step = 1.0
percent_visible = false

[node name="Control" type="Control" parent="level/CanvasLayer"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="level/CanvasLayer/Control"]
margin_right = 1288.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="level/CanvasLayer/Control"]

[node name="Timer" type="Timer" parent="level/CanvasLayer/Control"]
one_shot = true

[node name="Container" type="CenterContainer" parent="level/CanvasLayer/Control"]
margin_right = 896.0
margin_bottom = 448.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="level/CanvasLayer/Control/Container"]
margin_left = 146.0
margin_top = 132.0
margin_right = 750.0
margin_bottom = 316.0

[node name="VBoxContainer" type="VBoxContainer" parent="level/CanvasLayer/Control/Container/CenterContainer2"]
margin_right = 604.0
margin_bottom = 184.0

[node name="Label" type="Label" parent="level/CanvasLayer/Control/Container/CenterContainer2/VBoxContainer"]
margin_right = 674.0
margin_bottom = 183.0
text = "You cleaned the library from the evil book influence !

Sound effect  from https://www.zapsplat.com

Thanks for playing !"
align = 1

[node name="Label2" type="Label" parent="level/CanvasLayer/Control/Container/CenterContainer2/VBoxContainer"]
margin_top = 187.0
margin_right = 674.0
margin_bottom = 215.0
align = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="level/CanvasLayer/Control"]
stream = ExtResource( 7 )
volume_db = 3.319

[node name="Spellbook" parent="level" instance=ExtResource( 3 )]
position = Vector2( 1016, 0 )
spell_name = "fireball"
[connection signal="death_player" from="level/Player" to="level/Boss" method="_on_Player_death_player"]
[connection signal="boss_died" from="level/Boss" to="level/CanvasLayer/Control2" method="_on_Boss_boss_died"]
[connection signal="boss_died" from="level/Boss" to="level/CanvasLayer/Control" method="_on_Boss_boss_died"]
[connection signal="timeout" from="level/CanvasLayer/Control/Timer" to="level/CanvasLayer/Control" method="_on_Timer_timeout"]

[editable path="level"]

[editable path="level/CameraPlayer"]
